--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.29.3",
     "eslint": "^8.27.0",
-    "nuxt": "3.0.0-rc.13",
+    "nuxt": "3.0.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
